updates fragment icon

--- a/application/views/scripts/document/fragment/list.phtml
+++ b/application/views/scripts/document/fragment/list.phtml
@@ -33,5 +33,5 @@ $this->headTitle($this->title);
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
 <div class="smork-btn">
-  <a href="/document_fragment/create"><span class="upload-icon"><?php echo $this->translate("Create a fragment"); ?></span></a>
+  <a href="/document_fragment/create"><span class="create-fragment-icon"><?php echo $this->translate("Create a fragment"); ?></span></a>
 </div>
