saving pages in single lines, modifying simtext to support the new page models,  some cleanup in js,css ressource directories

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -11,7 +11,7 @@
     echo $this->headLink()
         ->prependStylesheet($this->baseUrl() . '/style/styles.css')
         ->appendStylesheet($this->baseUrl() . '/style/flick/jquery-ui-1.8.17.custom.css')
-        ->appendStylesheet($this->baseUrl() . '/js/libs/css/jquery.lightbox-0.5.css');
+        ->appendStylesheet($this->baseUrl() . '/style/jquery.lightbox-0.5.css');
     ?>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
