--- a/application/views/scripts/document/page/de-hyphen.phtml
+++ b/application/views/scripts/document/page/de-hyphen.phtml
@@ -5,15 +5,5 @@ $this->headTitle($this->title);
 Document: <?php echo $this->page->getDocument()->getTitle(); ?><br />
 Page: <?php echo $this->page->getPageNumber(); ?><br />
 <div class="document-page">
-<?php
-echo $this->deHyphenForm;
-/*
-foreach($this->pageLines as $pageLine) {
-  if($pageLine["hasHyphen"]) {
-    echo "<div class=\"page-line highlight\"><div class=\"checkbox-column\"><input checked=\"checked\" type=\"checkbox\" /></div>" . $pageLine["content"] . "</div>";
-  } else {
-    echo "<div class=\"page-line\"><div class=\"checkbox-column\">&nbsp;</div>" . $pageLine["content"] . "</div>";
-  }
-}*/
-?>
+<?php echo $this->deHyphenForm; ?>
 </div>
