--- a/application/views/scripts/document/page/stopwords.phtml
+++ b/application/views/scripts/document/page/stopwords.phtml
@@ -7,12 +7,4 @@ Document: <?php echo $this->page->getDocument()->getTitle(); ?><br />
 Page number: <?php echo $this->page->getPageNumber(); ?><br />
 
 Content: <br />
-<div class="document-page"><?php
- $lines = explode('<br />', $this->stopWordContent);
- ?>
-<ol>
- <?php foreach($lines as $line): ?>
-   <li><?php echo $line; ?></li>
-   <?php endforeach; ?>
- </ol>
-</div>
+<div class="document-page src-wrapper"><?php echo $this->stopWordContent; ?></div>
