Added bootstrap and fixed some basic problems

--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -8,6 +8,7 @@
     <?php //plugins as those below should be put into plugins.js later on ?>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/js/jquery.lightbox-0.5.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/bootstrap.min.js'); ?>"></script>
     
     <?php //The 'Actual' project scripts ?>
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
