--- a/application/views/scripts/pagination-control.phtml
+++ b/application/views/scripts/pagination-control.phtml
@@ -1,56 +1,57 @@
+<?php if($this->pageCount): ?>
+  <div class="pagination pagination-right">
+    <ul>
+    <li class="pagination-numbers disabled"><a><?php echo $this->firstItemNumber; ?> - <?php echo $this->lastItemNumber; ?> <?php echo $this->translate('of'); ?> <?php echo $this->totalItemCount; ?></a></li>
 
-<?php if ($this->pageCount): ?>
-<ul class="pagination clearfix">
-<li class="numbers"><?php echo $this->firstItemNumber; ?> - <?php echo $this->lastItemNumber; ?> <?php echo $this->translate("of"); ?> <?php echo $this->totalItemCount; ?></li>
- 
-<!-- First page link -->
-<?php if (isset($this->previous)): ?>
-  <li>
-  <a href="<?php echo $this->url(array('page' => $this->first)); ?>">|&laquo;</a>
-  </li>
-<?php else: ?>
-  <li><a class="disabled">|«</a></li>
-<?php endif; ?>
- 
-<!-- Previous page link -->
-<?php if (isset($this->previous)): ?>
-<li>  
-<a href="<?php echo $this->url(array('page' => $this->previous)); ?>">&laquo;</a>
-</li>
-  <?php else: ?>
-  <li><a class="disabled">«</a></li>
-<?php endif; ?>
- 
- <!-- Numbered page links -->
-<?php foreach ($this->pagesInRange as $page): ?>
-  <?php if ($page != $this->current): ?>
-    <li>
-    <a href="<?php echo $this->url(array('page' => $page)); ?>"><?php echo $page; ?></a>
+      <!-- First page link -->
+      <?php if(isset($this->previous)): ?>
+        <li>
+          <a href="<?php echo $this->url(array('page'=>$this->first)); ?>">|&laquo;</a>
         </li>
-  <?php else: ?>
-    <li><a class="active"><?php echo $page; ?></a></li>
-  <?php endif; ?>
-<?php endforeach; ?>
+      <?php else: ?>
+        <li class="disabled"><a>|«</a></li>
+      <?php endif; ?>
 
-<!-- Next page link -->
-<?php if (isset($this->next)): ?>
-  <li>
-  <a href="<?php echo $this->url(array('page' => $this->next)); ?>">»</a>
-  </li>
-<?php else: ?>
-  <li>
-  <a class="disabled">»</a>
-  </li>
-<?php endif; ?>
- 
-<!-- Last page link -->
-<?php if (isset($this->next)): ?>
-  <li>
-  <a href="<?php echo $this->url(array('page' => $this->last)); ?>">&raquo;|</a>
-  </li>
-<?php else: ?>
-  <li><a class="disabled">&raquo;|</a></li>
-<?php endif; ?>
- 
-</ul>
+      <!-- Previous page link -->
+      <?php if(isset($this->previous)): ?>
+        <li>  
+          <a href="<?php echo $this->url(array('page'=>$this->previous)); ?>">«</a>
+        </li>
+      <?php else: ?>
+        <li class="disabled"><a>«</a></li>
+      <?php endif; ?>
+
+      <!-- Numbered page links -->
+      <?php foreach($this->pagesInRange as $page): ?>
+        <?php if($page != $this->current): ?>
+          <li>
+            <a href="<?php echo $this->url(array('page'=>$page)); ?>"><?php echo $page; ?></a>
+          </li>
+        <?php else: ?>
+          <li class="active"><a><?php echo $page; ?></a></li>
+        <?php endif; ?>
+      <?php endforeach; ?>
+
+      <!-- Next page link -->
+      <?php if(isset($this->next)): ?>
+        <li>
+          <a href="<?php echo $this->url(array('page'=>$this->next)); ?>">»</a>
+        </li>
+      <?php else: ?>
+        <li class="disabled">
+          <a>»</a>
+        </li>
+      <?php endif; ?>
+
+      <!-- Last page link -->
+      <?php if(isset($this->next)): ?>
+        <li>
+          <a href="<?php echo $this->url(array('page'=>$this->last)); ?>">&raquo;|</a>
+        </li>
+      <?php else: ?>
+        <li class="disabled"><a>&raquo;|</a></li>
+      <?php endif; ?>
+
+    </ul>
+  </div>
 <?php endif; ?>
