--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -11,9 +11,8 @@
     <script defer src="<?php echo $this->baseUrl('/js/libs/numberfy.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.autosize.js'); ?>"></script>
 
-    <script defer src="<?php echo $this->baseUrl('/js/libs/js/jquery.lightbox-0.5.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.lightbox-0.5.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/bootstrap.min.js'); ?>"></script>
-
     
     <?php //The 'Actual' project scripts ?>
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
