--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -12,8 +12,7 @@
         ->appendStylesheet($this->baseUrl() . '/style/jquery.lightbox-0.5.css')
         ->appendStylesheet($this->baseUrl() . '/style/styles.css')
         ->prependStylesheet($this->baseUrl() . '/style/flick/jquery-ui-1.8.17.custom.css')
-        ->prependStylesheet($this->baseUrl() . '/style/bootstrap.min.css')
-        ->prependStylesheet($this->baseUrl() . '/style/bootstrap-responsive.min.css');
+        ->prependStylesheet($this->baseUrl() . '/style/bootstrap.min.css');
     ?>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
