--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -20,7 +20,7 @@
     <script src="<?php echo $this->baseUrl('/js/libs/modernizr-2.5.3.min.js'); ?>"></script>
   </head>
   <body>
-    <noscript><div class="alert-danger top-alert"><div class="alert alert-danger"><p><?php echo $this->translate('Unfortunately JavaScript is currently not supported or is disabled in your browser. Please enable JavaScript for full functionality.'); ?></p></div></div></noscript>
+    <noscript><div class="alert-danger top-alert"><div class="alert alert-danger"><h4 class="alert-heading"><?php echo $this->translate('Attention!'); ?></h4><p><?php echo $this->translate('Unfortunately JavaScript is currently not supported or is disabled in your browser. Please enable JavaScript for full functionality.'); ?></p></div></div></noscript>
     <!-- Prompt IE 7 and lower users to install Chrome Frame. -->
     <!--[if lt IE 8]><div class="alert-danger top-alert"><div class="alert alert-danger"><p><?php echo $this->translate('Your browser is');?><em> <?php echo $this->translate('ancient!'); ?></em> <a href="http://browsehappy.com/"><?php echo $this->translate('Upgrade to a different browser'); ?></a> <?php echo $this->translate('or'); ?> <a href="http://www.google.com/chromeframe/?redirect=true"><?php echo $this->translate('install Google Chrome Frame'); ?></a> <?php echo $this->translate('to experience this site.'); ?></p></div></div><![endif]-->
     <header role="toolbar">
