--- a/application/layouts/scripts/partials/sidebars/document_tools.phtml
+++ b/application/layouts/scripts/partials/sidebars/document_tools.phtml
@@ -1,6 +1,8 @@
-<nav id="right-nav">
-  <h4>Actions</h4>
-  <ul>
+<nav id="right-nav" class="ell">
+  <ul class="nav nav-list">
+    <li class="nav-header">
+      Actions
+    </li>
     <li>
       <a href="<?php echo "/document_page/list/id/" . $this->documentId; ?>">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/page.png'); ?>" title="<?php echo $this->translate("Show"); ?>" /><span><?php echo $this->translate("Show"); ?></span>
