--- a/application/layouts/scripts/partials/sidebars/page_tools.phtml
+++ b/application/layouts/scripts/partials/sidebars/page_tools.phtml
@@ -1,6 +1,7 @@
 <nav id="right-nav">
-  <h4>Actions</h4>
-  <ul>
+  <ul class="nav nav-list">
+    <li class="nav-header">
+  Actions</li>
     <li>
       <a href="<?php echo "/document_page/show/id/" . $this->pageId; ?>">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/page.png'); ?>" title="<?php echo $this->translate("Show"); ?>" /><span><?php echo $this->translate("Show"); ?></span>
@@ -36,9 +37,8 @@
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/table_row_delete.png'); ?>" title="<?php echo $this->translate("Simtext"); ?>" /><span><?php echo $this->translate("Simtext"); ?></span>
       </a>
     </li>
-  </ul>
-  <h4>Links</h4>
-  <ul>
+    <li class="nav-header">
+  Links</li>
     <li>
       <a href="<?php echo "/document_fragment/list/page/" . $this->pageId; ?>">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/textfield_rename.png'); ?>" title="<?php echo $this->translate("Fragments"); ?>" /><span><?php echo $this->translate("Fragments"); ?></span>
